Fixed the spacing issue between the bottom of the search bar and the top of the table.  There should now be 20px between the two.

--- a/awx/ui/client/legacy-styles/lists.less
+++ b/awx/ui/client/legacy-styles/lists.less
@@ -263,3 +263,11 @@ table, tbody {
     background-color: @list-actn-bg-hov !important;
     color: @list-actn-icn-hov;
 }
+
+.List-searchWidget {
+    height: 34px;
+}
+
+.List-searchRow {
+    margin-bottom: 20px;
+}
